don't overwrite OPJ files when saving

BUG: 496480